--- a/ece-188/package.json
+++ b/ece-188/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "@types/tailwindcss": "^3.1.0",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
